made it more accessible

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <header>
     <nav>
       <a href="index.html">
-        <img src="images/logos/Lancaster's-logos.jpeg" width="80" height=80">
+        <img src="images/logos/Lancaster's-logos.jpeg" width="80" height=80" alt="logo">
       </a>
       <ul>
         <li><a href="index.html">
@@ -53,20 +53,26 @@
 
   <section id="about">
     <div class="about-container">
-      <img src="images/logos/forkandknife.png" width="200" height="50">
+      <img src="images/logos/forkandknife.png" width="200" height="50" alt="logo">
       <h2>About Us</h2>
     </div>
     <div class="story-box">
-      <div class="owner-1">
-        <img src="images/ana-and-rob/ana-prep.jpeg" width="400" height="600">
+      <div class="top">
+      <h1>OUR STORY</h1>
+        <b>Lancaster’s was founded by chef Ana Lancaster and Sommelier Robert Lancaster in May 2005.</b>
       </div>
-      <div class="story-info">
-        <h1>OUR STORY</h1>
-        <p><b>Lancaster’s was founded by chef Ana Lancaster and Sommelier Robert Lancaster in May 2005.</b> The essence of this combination makes up much of Fallows DNA, where conscious culinary creativity meets hospitality experience and passion for wine. What followed from their meeting were a series of sold-out residencies to establish Lancaster’s as one of the most exciting restaurant concepts on the UK restaurant scene. Lancaster’s permanent home in St James’s market was established in November 2010 and has since attracted a string of awards including both the Marie Claire and GQ ‘sustainable restaurant of the year’ and the Caterer award for ‘best new restaurant’</p>
+        <div class="owner-images">
+        <div class="owner-1">
+          <img src="images/ana-and-rob/ana-prep.jpeg" width="400" height="600" alt="Ana prepping food">
+        </div>
+        <div class="owner-2">
+          <img src="images/ana-and-rob/robert-smell.jpeg" width="400" height="600" alt="Robert smelling wine">
+        </div>
+      </div>
+        <div class="story-info"></div>
+        <p> The essence of this combination makes up much of Lancaster's DNA, where conscious culinary creativity meets hospitality experience and passion for wine. What followed from their meeting were a series of sold-out residencies to establish Lancaster’s as one of the most exciting restaurant concepts on the UK restaurant scene. Lancaster’s permanent home in <strong>St James’s market</strong> was established in November 2010 and has since attracted a string of awards including both the Marie Claire and GQ <em>‘sustainable restaurant of the year’</em> and the Caterer award for <em>‘best new restaurant’</em></p>
     </div>
-      <div class="owner-2">
-        <img src="images/ana-and-rob/robert-smell.jpeg" width="400" height="600" >
-      </div>
+      
     </div>
   </section>
 
@@ -84,9 +90,9 @@
         </p>
       </div>
       <div class="awards">
-        <img src="images/awards/B-Corp-Logo-White-RGB.png" width="100" height="100">
-        <img src="images/awards/National-Restaurant-Awards.svg" width="100" height="100">
-        <img src="images/awards/hotdinners.svg" width="100" height="100">
+        <img src="images/awards/B-Corp-Logo-White-RGB.png" width="100" height="100" alt="an award">
+        <img src="images/awards/National-Restaurant-Awards.svg" width="100" height="100" alt="an award">
+        <img src="images/awards/hotdinners.svg" width="100" height="100" alt="an award">
       </div>
       <div class="address">
         <b>Visit us at:</b>
