--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header id="transition-header" class="index-header">
     <nav>
       <a href="index.html">
-        <img src="images/logos/Lancaster's-logos.jpeg" width="80" height=80">
+        <img src="images/logos/Lancaster's-logos.jpeg" width="80" height=80" alt="logo">
       </a>
       <ul>
         <li><a href="index.html">
@@ -53,7 +53,7 @@
     </div>
   </header>
   <div class="main-content">
-    <h1><img src="images/logos/whitelogo-cropped.png" width="400" height="200"></h1>
+    <h1><img src="images/logos/whitelogo-cropped.png" width="400" height="200" alt="logo"></h1>
     <p>Discover Conscious Gastronomy in the heart of St James's</p>
     <button>
       <a href="reservations.html">Book a Table</a>
@@ -62,11 +62,11 @@
   <section id="gallery">
     <h2>Gallery</h2>
     <div class="img-container">
-    <img src="images/food/food-1.jpeg" width="250px" height="250px">
-    <img src="images/food/food-5.jpeg" width="250px" height="250px">
-    <img src="images/food/food-6.jpeg" width="300px" height="250px">
-    <img src="images/food/food-7.jpeg" width="250px" height="250px">
-    <img src="images/food/food-service-2.jpeg" width="280px" height="250px">
+    <img src="images/food/food-1.jpeg" width="250px" height="250px" alt=" image of food">
+    <img src="images/food/food-5.jpeg" width="250px" height="250px" alt=" image of food" >
+    <img src="images/food/food-6.jpeg" width="300px" height="250px" alt=" image of food" >
+    <img src="images/food/food-7.jpeg" width="250px" height="250px" alt=" image of food" >
+    <img src="images/food/food-service-2.jpeg" width="280px" height="250px" alt=" image of food" >
   </div>
   </section>
   
@@ -118,9 +118,9 @@
           </p>
         </div>
         <div class="awards">
-          <img src="images/awards/B-Corp-Logo-White-RGB.png" width="100" height="100">
-          <img src="images/awards/National-Restaurant-Awards.svg" width="100" height="100">
-          <img src="images/awards/hotdinners.svg" width="100" height="100">
+          <img src="images/awards/B-Corp-Logo-White-RGB.png" width="100" height="100" alt="an award" >
+          <img src="images/awards/National-Restaurant-Awards.svg" width="100" height="100" alt="an award">
+          <img src="images/awards/hotdinners.svg" width="100" height="100" alt="an award">
         </div>
         <div class="address">
           <b>Visit us at:</b>
