--- a/reservations.html
+++ b/reservations.html
@@ -13,7 +13,7 @@
   <header>
     <nav>
       <a href="index.html">
-        <img src="images/logos/Lancaster's-logos.jpeg" width="80" height=80">
+        <img src="images/logos/Lancaster's-logos.jpeg" width="80" height=80" alt="logo">
       </a>
       <ul>
         <li><a href="index.html">
@@ -56,7 +56,7 @@
 
   <section id="Reservations">
     <div class="res-container">
-      <img src="images/logos/forkandknife.png" width="200" height="50">
+      <img src="images/logos/forkandknife.png" width="200" height="50" alt="logo">
       <h2>Reservations</h2>
     </div>
     <p class="info">We are happy to accommodate dietary requirements. <br> Please just make a note in your reservation or let us know upon arrival. <br> Lancaster’s is on ground level, with an accessible bathroom situated on the same floor.</p>
@@ -127,7 +127,7 @@
     </div>
 
     <div class="personal-details-section">
-      <h2>Your Details</h2>
+      <h2>YOUR DETAILS</h2>
       <input type="text" id="fname" placeholder="First name"
       required>
       <input type="text" id="lname" placeholder="Surname"
@@ -135,8 +135,8 @@
       <input type="tel" id="phone" placeholder="Phone number" required>
       <input type="email" id="email" placeholder="email" required>
       <div class="buttons">
-        <button class="back-button">Back</button>
-        <button class="submit-button">Submit</button>
+        <button class="back-button"> <i class="fa-solid fa-arrow-left"></i> Back</button>
+        <button class="submit-button">Submit <i class="fa-solid fa-check"></i></button>
       </div>
     </div>
   </section>
@@ -155,9 +155,9 @@
         </p>
       </div>
       <div class="awards">
-        <img src="images/awards/B-Corp-Logo-White-RGB.png" width="100" height="100">
-        <img src="images/awards/National-Restaurant-Awards.svg" width="100" height="100">
-        <img src="images/awards/hotdinners.svg" width="100" height="100">
+        <img src="images/awards/B-Corp-Logo-White-RGB.png" width="100" height="100" alt="an award">
+        <img src="images/awards/National-Restaurant-Awards.svg" width="100" height="100" alt="an award">
+        <img src="images/awards/hotdinners.svg" width="100" height="100" alt="an award">
       </div>
       <div class="address">
         <b>Visit us at:</b>
