--- a/reservations.html
+++ b/reservations.html
@@ -64,10 +64,12 @@
 
     <div class="res-section">
       <p class="book-a-table">BOOK A TABLE</p>
+      <form id="res-form">
       <div class="inputs-for-res">
+        
         <div class="date-input">
           <label for="date">Date:</label>
-          <input type="date" id="date" required>
+          <input type="date" id="date"  required>
         </div>
         <div class="time-input">
           <label for="time">Time:</label>
@@ -139,6 +141,7 @@
         <button class="submit-button">Submit <i class="fa-solid fa-check"></i></button>
       </div>
     </div>
+    </form>
   </section>
 
   <footer>
@@ -173,3 +176,4 @@
 
 </body>
 </html>
+<!-- Icons made by FontAwesome (https://fontawesome.com) -->
